# dioxus-admin

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  style.css  tailwind.config.js
src/: main.rs
src/layouts/: admin.rs  mod.rs
src/pages/admin/: dashboard.rs  mod.rs  users.rs
